canary-manifests/frontend-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
   name: frontend-destination
spec:
   host: frontend.default.svc.cluster.local
   subsets:
   - name: grey
     labels:
       version: grey
   - name: blue
     labels:
       version: blue
