canary-manifests/route-rule-frontend-100.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  gateways:
  - frontend-gateway
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: frontend
        subset: grey
      weight: 100
#    - destination:
#        host: frontend
#        subset: red
#      weight: 10
