canary-manifests/route-rule-frontend-default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  gateways:
  - frontend-gateway
  hosts:
  - "*"
  http:
  - route:
    - destination:
        host: frontend
        port:
          number: 80
